ubah profesi hero

--- a/index.HTML
+++ b/index.HTML
@@ -69,9 +69,8 @@
                             class="font-bold block text-wrn2 text-4xl mt-1 md:text-5xl" data-aos="flip-down"
                             data-aos-delay="200">M Indra
                             Alfhazy</span></h1>
-                    <h2 class="font-medium text-slate-600 mb-4 mt-[10px] text-lg lg:text-2xl md:text-xl">Mahasiswa |
-                        Teknik
-                        Informatika B1</h2>
+                    <h2 class="font-medium text-slate-600 mb-4 mt-[10px] text-lg lg:text-2xl md:text-xl">Programmer |
+                        Front End Web Developer</h2>
                     <p class="font-medium text-slate-400 leading-relaxed mb-20 md:text-xl">Terima kasih telah meluangkan
                         waktu
                         untuk melihat karya-karya saya. Dan saya berharap dapat bekerja sama dengan Anda dalam
