--- a/index.HTML
+++ b/index.HTML
@@ -27,28 +27,28 @@
                     <nav id="nav-menu"
                         class="hidden absolute py-5 bg-white right-4 top-full shadow-lg rounded-lg w-full max-w-[250px] lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
-                            <li class="group">
+                            <li id="logo" class="group">
                                 <a href="#home"
                                     class="text-base py-2 mx-8 text-wrn2 group-hover:text-wrn1 flex scroll-smooth">Home</a>
                             </li>
-                            <li class="group">
+                            <li id="logo" class="group">
                                 <a href="#about"
                                     class="text-base py-2 mx-8 text-wrn2 group-hover:text-wrn1 flex scroll-smooth">Tentang
                                     Saya</a>
                             </li>
-                            <li class="group">
+                            <li id="logo" class="group">
                                 <a href="#portofolio"
                                     class="text-base py-2 mx-8 text-wrn2 group-hover:text-wrn1 flex scroll-smooth">Project</a>
                             </li>
-                            <li class="group">
+                            <li id="logo" class="group">
                                 <a href="#Client"
                                     class="text-base py-2 mx-8 text-wrn2 group-hover:text-wrn1 flex scroll-smooth">Klien</a>
                             </li>
-                            <li class="group">
+                            <li id="logo" class="group">
                                 <a href="#blog"
                                     class="text-base py-2 mx-8 text-wrn2 group-hover:text-wrn1 flex scroll-smooth">Blog</a>
                             </li>
-                            <li class="group">
+                            <li id="logo" class="group">
                                 <a href="#contact"
                                     class="text-base py-2 mx-8 text-wrn2 group-hover:text-wrn1 flex scroll-smooth">Kontak</a>
                             </li>
@@ -70,16 +70,16 @@
                             data-aos-delay="200">M Indra
                             Alfhazy</span></h1>
                     <h2 class="font-medium text-slate-600 mb-4 mt-[10px] text-lg lg:text-2xl md:text-xl">Programmer |
-                        Front End Web Developer</h2>
+                        Front End Web</h2>
                     <p class="font-medium text-slate-400 leading-relaxed mb-20 md:text-xl">Terima kasih telah meluangkan
                         waktu
                         untuk melihat karya-karya saya. Dan saya berharap dapat bekerja sama dengan Anda dalam
                         proyek yang menarik.</p>
                     <a href="https://api.whatsapp.com/send?phone=6289682028377&text=Assalamualaikum,%20Saya%20sangat%20terkesan%20dengan%20portofolio%20Website%20Anda!%20Bisakah%20Anda%20memberikan%20lebih%20banyak%20informasi%20tentang%20proyek-proyek%20Anda%20dan%20apakah%20Anda%20menerima%20proyek%20kolaborasi?%20Terima%20kasih!%20🙏
                     " target="_blank"
-                        class="btn glow-on-hover text-white hover:text-slate-500 font-semibold ease-in-out md:text-xl"
+                        class="btn glow-on-hover text-white lg:w-64 lg:h-12 hover:text-slate-500 font-semibold ease-in-out md:text-xl"
                         data-aos="zoom-out-right" data-aos-delay="400" type="button">
-                        <strong>Chat Whatsapp</strong>
+                        <strong class="lg:text-lg">Chat Whatsapp</strong>
                         <div id="container-stars">
                             <div id="stars"></div>
                         </div>
