--- a/index.HTML
+++ b/index.HTML
@@ -560,7 +560,7 @@
     <!-- Tombol melayang -->
     <a id="cs" href="https://api.whatsapp.com/send?phone=6289682028377&text=Asslamualaikum,%20Bisakah%20anda%20membantu%20saya%20!%20
     " class=" fixed z-[9999] hidden md:w-24 md:h-24 w-14 items-center rounded-xl h-14 p-2 right-4 bottom-3">
-        <img src="/img/simbol/technical-support (1).png" alt="cs"
+        <img src="/img/simbol/technical-support.png" alt="cs"
             class="hover:scale-110 transition w-10 h-10 md:w-16 md:h-16"></a>
     <!-- end tombol -->
 
